# Checkers

./: CMakeLists.txt  README.md
doc/: checkers.txt  game_rules.md
inc/: AI.h  AI_wagi.h  Board.hpp  Eng_boa.h  Engine.h  Game_loop.h  LibrariesAndVariables.hpp  Mode.h  Register.h  font_menu.h  m_loop.h  pola_menu.h  screen.h  tekst_menu.h  txt_menu.h
mov/: move.txt
src/: AI.cpp  AI_gracz.cpp  Board.cpp  Eng_boa.cpp  Engine.cpp  Functions.cpp  Game_loop.cpp  Main.cpp  Register.cpp  font_menu.cpp  m_loop.cpp  pola_menu.cpp  screen.cpp  tekst_menu.cpp  txt_menu.cpp
txt/: Atrybuty.txt  USERS.txt  a1.txt  a2.txt  a3.txt  a4.txt  a5.txt
